--- a/myproxy/oauth/source/myproxyoauth/static/oauth.css
+++ b/myproxy/oauth/source/myproxyoauth/static/oauth.css
@@ -56,6 +56,11 @@
     margin-right: auto;
     margin-bottom: 40px;
 }
+#duo_iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 body {
     font-family: "Helvetica Neue",Arial,Helvetica,sans-serif;
     font-size: 12px;
