Update to v2 of Duo JavaScript file.

--- a/myproxy/oauth/source/myproxyoauth/templates/duo.html
+++ b/myproxy/oauth/source/myproxyoauth/templates/duo.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>MyProxy Delegation Service</title>
-    <script src="/duo/Duo-Web-v1.bundled.js"></script>
+    <script src="/duo/Duo-Web-v2.min.js"></script>
     <script> Duo.init({
     'host': {{ duohost }} ,
     'sig_request': {{ sig_request }},
